Fix TypeScript browser compatibility issues
- Replace NodeJS.Timeout with number type in client components
- Fix TriviaGame, WebSocketContext, useSaveOperation, useVisualFeedback hooks
- Add postinstall script to ensure subdirectory dependencies are installed
- Resolve 'Cannot find namespace NodeJS' errors in browser environment
- All builds now pass locally and should work on Vercel

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Event Gamification Platform with Client and Organizer apps",
   "main": "server/index.js",
   "scripts": {
+    "postinstall": "cd client && npm install && cd ../organizer && npm install",
     "dev": "concurrently \"npm run dev:shared\" \"npm run dev:user-api\" \"npm run dev:organizer-api\" \"npm run dev:client\" \"npm run dev:organizer\"",
     "dev:frontend": "concurrently \"npm run dev:client\" \"npm run dev:organizer\"",
     "dev:backend": "concurrently \"npm run dev:shared\" \"npm run dev:user-api\" \"npm run dev:organizer-api\"",
