Fix organizer SPA routing in vercel.json
- Add proper routing rules for organizer assets and static files
- Ensure /organizer/* routes serve organizer/index.html for React Router
- Fix SPA routing for both client and organizer applications
- This should make https://joli-vert.vercel.app/organizer work correctly

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,31 @@
 {
   "buildCommand": "npm run build:frontend && mkdir -p public && cp -r client/dist/* public/ && mkdir -p public/organizer && cp -r organizer/dist/* public/organizer/",
   "outputDirectory": "public",
-  "installCommand": "npm install"
+  "installCommand": "npm install",
+  "routes": [
+    {
+      "src": "/organizer/assets/(.*)",
+      "dest": "/organizer/assets/$1"
+    },
+    {
+      "src": "/organizer/favicon.svg",
+      "dest": "/organizer/favicon.svg"
+    },
+    {
+      "src": "/organizer/(.*)",
+      "dest": "/organizer/index.html"
+    },
+    {
+      "src": "/organizer",
+      "dest": "/organizer/index.html"
+    },
+    {
+      "src": "/assets/(.*)",
+      "dest": "/assets/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ]
 }
