--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "npm run build:frontend && mkdir -p public && cp -r client/dist/* public/ && mkdir -p public/organizer && cp -r organizer/dist/* public/organizer/",
+  "buildCommand": "cd client && npm run build && cd ../organizer && npm run build && cd .. && mkdir -p public && cp -r client/dist/* public/ && mkdir -p public/organizer && cp -r organizer/dist/* public/organizer/",
   "outputDirectory": "public",
   "installCommand": "npm install",
   "routes": [
